Keep old container alive until servers are switched